2013-11-04  Ramon Casero  <rcasero@gmail.com>

	* matlab/CgalToolbox/CgalCheckSelfIntersect.cpp: (0.4.0)
	* matlab/CgalToolbox/cgal_check_self_intersect.m: (0.2.0)

	- Add input argument ITRI. Row vector of triangle indices. Only
	the triangles in ITRI will be checked for intersections. Checking
	for all triangles is quite slow, so when we are only interested in
	one triangle, this saves a lot of time.

	* matlab/ManifoldToolbox/smdscale.m: (0.5.3)
	* matlab/ManifoldToolbox/lmdscale.m: (0.1.2)

	 - Fix bug. For full distance matrices, we were using the norm of
	the matrix instead of the sum of squared terms to compute the
	stress values. The norm of a matrix is the largest single
	eigenvalue of the matrix, not the sum of squared elements.

2013-11-03  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/dmatrix_mesh.m: (0.4.3)

	- In 'fastmarching', symmetrize distance matrix by throwing away
	the bottom half of the distance matrix, and replacing it by the
	top half. We cannot compute only the top half, because if we use
	options.constraint_map, the algorithm will stop sometimes before
	reaching vertices it should reach. Maybe that's because it has
	already reached all vertices that correspond to the bottom half,
	I'm not sure.

	- In 'fastmarching', simplify code by always having an
	options.constraint_map, even if it's empty because the user didn't
	provide one.

	* matlab/PointsToolbox/coords_from_dist_gower.m: (0.2.1)

	- Update syntax that checks the number of input/output arguments
	as it will be deprecated by Matlab.

2013-10-27  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/surface_param.m: (0.6.0)
	* matlab/test/test_surface_param.m: (0.6.0)

	- Rewrite 'smdscale', previously called 'sphisomap'. We no longer
	use Dijkstra, so it's not Isomap. We use Fast Marching to compute
	distances instead by default (although Dijkstra can still be
	used). Parameters to the distance algorithm and to the MDS